crates/matrix-sdk-common/src/snapshots/snapshot_test_verification_level-3.snap
---
source: crates/matrix-sdk-common/src/deserialized_responses.rs
expression: "VerificationLevel::None(DeviceLinkProblem::InsecureSource)"
---
{
  "None": "InsecureSource"
}
