crates/matrix-sdk-common/src/snapshots/snapshot_test_verification_states-3.snap
---
source: crates/matrix-sdk-common/src/deserialized_responses.rs
expression: "VerificationState::Unverified(VerificationLevel::None(DeviceLinkProblem::InsecureSource,))"
---
{
  "Unverified": {
    "None": "InsecureSource"
  }
}
