crates/matrix-sdk-common/src/snapshots/snapshot_test_verification_states-4.snap
---
source: crates/matrix-sdk-common/src/deserialized_responses.rs
expression: "VerificationState::Unverified(VerificationLevel::None(DeviceLinkProblem::MissingDevice,))"
---
{
  "Unverified": {
    "None": "MissingDevice"
  }
}
