crates/matrix-sdk-common/src/snapshots/snapshot_test_verification_states-5.snap
---
source: crates/matrix-sdk-common/src/deserialized_responses.rs
expression: "VerificationState::Verified"
---
"Verified"
